[project]
name = "bw-to-color"
version = "0.1.0"
description = "BW coloring model"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "clearml>=2.1.3",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
